After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703254 - Doc: various fixes
Doc: various fixes
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
2.37.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-06-28 14:09 UTC by Sébastien Wilmet
Modified: 2013-06-30 08:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Doc: small fixes (3.04 KB, patch)
2013-06-28 14:09 UTC, Sébastien Wilmet
accepted-commit_now Details | Review

Description Sébastien Wilmet 2013-06-28 14:09:27 UTC
I'll attach a patch with various documentation fixes.
Comment 1 Sébastien Wilmet 2013-06-28 14:09:59 UTC
Created attachment 247989 [details] [review]
Doc: small fixes
Comment 2 Matthias Clasen 2013-06-30 01:50:21 UTC
Review of attachment 247989 [details] [review]:

The changes look fine. It would be good to have a sentence in the commit message, beyond just the bug reference. Something like:

This commit adds the GTestSubprocessFlags enum to the docs, and fixes several minor typos in the various places.
Comment 3 Sébastien Wilmet 2013-06-30 08:35:27 UTC
Thanks for the review, I've added the sentence in the commit message and pushed it to the master branch.